--- a/views/testform.erb
+++ b/views/testform.erb
@@ -1,4 +1,5 @@
-<form action="/form" method="post">  
-  <input type="text" name="message">  
-  <input type="submit">  
+<form class="navbar-form pull-left" action="/login" method="post">
+	<input type="text" placeholder="Username" name="username">
+	<input type="password" placeholder="Password" name="password">
+	<button type="submit">Sign in</button>
 </form>
