Aikojen nayttaminen taulukossa

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -27,3 +27,12 @@ body {
   margin-bottom: 15px;
   padding: 7px 9px;
 }
+
+.tr-link {
+  cursor: pointer;
+}
+
+.table-hover tbody tr:hover td,
+.table-hover tbody tr:hover th {
+  background-color: #E1EDFF;
+}
