--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,8 +2,8 @@
 %html  
   %head  
     %title Site title
-    %link(href="css/bootstrap.min.css" rel="stylesheet" media="screen")
-    %link(href="css/default.css" rel="stylesheet" media="screen")
+    %link(href="/css/bootstrap.min.css" rel="stylesheet" media="screen")
+    %link(href="/css/default.css" rel="stylesheet" media="screen")
 
   %body
     .container
@@ -23,4 +23,4 @@
               %a(href="/?logout") Log out
         %hr
       
-      =yield
+      =yield 
