Pieni muutos kirjautumiseen

--- a/views/index.haml
+++ b/views/index.haml
@@ -10,7 +10,7 @@
   %div(class="alert alert-info")
     You need to log in first!
 
-%form.form-signin(action="/" method="post")
+%form.form-signin(action="/login" method="post")
   %h2 Sign in
   %input(type="text" placeholder="Username" name="username")
   %input(type="password" placeholder="Password" name="password")
